force-app/main/default/objects/SEG_Reclamaciones__c/SEG_Reclamaciones__c.object-meta.xml
<CustomObject>
    <label>Reclamaciones</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Reclamaciones Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reclamaciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>