force-app/main/default/objects/SEG_Reclamaciones__c/fields/SEG_Plazo1Reclamacion__c.field-meta.xml
<CustomField>
    <fullName>SEG_Plazo1Reclamacion__c</fullName>
    <label>Plazo 1ª Reclamación</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>