force-app/main/default/objects/SEG_Reclamaciones__c/fields/SEG_Plazo3Reclamacion__c.field-meta.xml
<CustomField>
    <fullName>SEG_Plazo3Reclamacion__c</fullName>
    <label>Plazo 3ª Reclamación</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>