force-app/main/default/objects/SEG_Reclamaciones__c/fields/SEG_PlazoEnvioGestor__c.field-meta.xml
<CustomField>
    <fullName>SEG_PlazoEnvioGestor__c</fullName>
    <label>Plazo Envío al Gestor</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>