force-app/main/default/objects/SEG_Reclamaciones__c/fields/SEG_PlazoLlamada__c.field-meta.xml
<CustomField>
    <fullName>SEG_PlazoLlamada__c</fullName>
    <label>Plazo Llamada</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>